updated for added comments

--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -47,6 +47,7 @@ form {
 }
 
 .standardLink {
+  cursor: pointer;
   float: right;
   padding:8px 10px 0 10px;
   color:#ffffff;
@@ -66,9 +67,9 @@ form {
   font-size: 25px;
 }
 
-.App-link {
+/*.App-link {
   color: #61dafb;
-}
+}*/
 
 .boardListing {
   text-align: center;
@@ -90,6 +91,7 @@ form {
 }
 
 .title {
+  cursor: default;
   margin:0;
   width: 100%;
   padding-bottom: 8px;
@@ -97,28 +99,36 @@ form {
 }
 
 .newLane {
-  cursor: pointer;
-  font-size: 25px;
-  background-color: #4b5162ef;
+  opacity: 0.5;
+  font-size: 19px;
+  background-color: #4b5162;
   flex: 0 0 auto;
-  margin-left: 10px;
+  margin: 0 10px;
   width: 20vmax;
-  height: 3.6em;
+  height: 70px;
   border-radius: 10px;
 }
-
 .newLane:hover {
-  background-color: #70788bef;
+  cursor: pointer;
+  opacity: 0.9;
 }
+/*.newLane p {
+  margin: 0;
+  background-color: #4b5162;
+  cursor: pointer;
+  padding-top: 20px;
+  text-align: center;
+  height: 2.5em;
+  border-radius: 10px;
+}*/
 
 .swimLane {
   text-align: left;
   font-size: 25px;
-  background-color: #4b5162ef;
-  
+  background-color: #4b5162f8;
+  flex: 0 0 auto;
   margin-left: 10px;
   padding-left: 10px;
-  margin-left: 10px;
   width: 20vmax;
   height: 95%;
   border-radius: 10px;
@@ -158,11 +168,10 @@ form {
 
 .addCardBtn {
   cursor: pointer;
-  height: 75px;
+  height: 65px;
+  font-size: 20px;
   /*width: calc(100%-10vmin);*/
-  margin: 0;
-  margin-right: 10px;
-  margin-bottom: 20px;
+  margin: 20px 10px 20px 0;
   text-align: center;
 }
 
@@ -172,7 +181,8 @@ form {
 }
 
 .addCardBtn p {
-  padding-top: 15px;
+  padding-top: 16px;
+  margin: 0;
 }
 
 .card {
@@ -193,7 +203,7 @@ form {
 .card p {
   padding: 0 5px 5px;
   margin: 0;
-  font-size: 15px;
+  font-size: 12px;
   word-wrap: break-word;
 }
 
@@ -366,44 +376,57 @@ button.cardForm {
   background-color: #70788b;
   color: #ffffff;
 }
+button.cardForm:hover {
+  background-color: #97a3bb;
+}
+
 button.formAdd {
   cursor: pointer;
   background-color: #5479a7;
   margin: 0 0 25px 0;
 }
-
 button.formAdd:hover {
   background-color: #7da2cf;
 }
+
 .closeCardInfoButton {
-  color:#585858;
-  display: inline;
+  cursor: pointer;
   float: right;
+  color: white;
+  display: inline;
+  text-align: right;
   margin: 0px;
-  width: 5%;
+  margin-right: 20px;
+  font-size: 35px;
 }
 .displayCardInfoButtonArea {
-  margin-top: 2%;
-  margin-left: 2%;
-  width:90%;
+  margin-top: 15px;
+  width:100%;
   height: 10%
 }
 button.displayCardInfoButton:disabled {
   color: white;
-  background-color: rgb(103, 103, 160);
+  background-color: #6767a0;
   transition: .5s;
 }
 button.displayCardInfoButton {
+  cursor: pointer;
+  margin-right: 10px;
   height: 100%;
-  width: 125px;
+  width: 200px;
   border: none;
   border-radius: 5px;
   color: white;
-  background-color: blue;
+  font-size: 20px;
+  background-color: #5479a7;
   transition: .5s;
 }
 #displayCardDeleteButton {
-  background-color: red;
+  cursor: pointer;
+  width: 200px;
+  margin-left: 10px;
+  background-color: #FF2424;
+  font-size: 20px;
 }
 .displayCardInfoContainer {
   position: absolute;
@@ -421,52 +444,97 @@ button.displayCardInfoButton {
   width: 75%;
   height: 75%;
   border-radius: 5px;
-  border: 1px black solid;
-  background-color: #ffffff;
+  background-color: #2d313d;
 }
+
 .cardDescription {
-  width: 100%;
-  height: 100%;
+  color: white;
+  /*width: 96.5%;*/
   text-align: left;
-  resize: none;
+
+  padding: 10px;
+
+  height:100%;
+  width: 100%;
+  float: left;
+
+  background-color: #6a738680;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 5px;
 }
+.cardDescription:focus {
+  background-color: #434857;
+  color: white;
+}
+.cardDescription::placeholder {
+  color: white;
+  opacity: 1;
+}
+.cardDescription:-ms-input-placeholder {
+  color: white;
+}
+.cardDescription::-ms-input-placeholder {
+  color: white;
+}
+
 .cardHeader {
   height: 10%;
-
 }
 .cardTitle {
+  color: white;
   display: inline;
   width: 90%;
   float: left;
   font-size: 24px;
+  font-weight: bold;
   width:auto;
   margin-left: 15px;
-  margin-top: 10px;
+  margin-top: 13px;
   margin-right: 10px;
+
+  background-color: transparent;
+  box-sizing: border-box;
+  border: none;
 }
+.cardTitle:focus {
+  background-color: #6a738680;
+  color: white;
+}
+.cardTitle::placeholder {
+  color: white;
+  opacity: 1;
+}
+.cardTitle:-ms-input-placeholder {
+  color: white;
+}
+.cardTitle::-ms-input-placeholder {
+  color: white;
+}
+
 .contentArea {
   width: 100%;
-  margin-left: 15px;
   height: 75%;
 }
 .descriptionArea {
-  
+  margin-left: 15px;
   height:100%;
-  width: 40%;
+  width: 41%;
   float: left;
-  background-color: blue;
+  background-color: transparent;
 }
 .additionalInformationSidebar {
-  margin-right: 2.5%;
+  margin-right: 15px;
   height:100%;
   width: 55%;
   float: right;
-  background-color: red;
+  background-color: transparent;
 }
 .cardCommentContainer {
   width:100%;
   height: 100%;
-  background-color: gray;
+  background-color: transparent;
+  border-radius: 5px;
 
 }
 .cardComments {
@@ -474,32 +542,33 @@ button.displayCardInfoButton {
   height: 90%;
   display: flex;
   overflow-y: auto;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   flex-direction: column;
-  background-color: lightgray;
+  background-color: #6a738680;
 }
 .cardComment {
+  word-wrap: break-word;
   width: 100%;
-  height: 50px;
+  /*min-height: 0;*/
+  /*min-height: 25px;*/
   padding-top: 10px;
   text-align: left;
   font-size: 14px;
   
 }
 div.cardComment {
-  background-color: #cccccc;
+  background-color: #6a7386;
+  padding: 8px 0 10px 0;
 }
 div.cardComment:nth-child(even) {
-  background-color: #f2f2f2;
-  color: #cccccc;
+  background-color: #3a4253;
 }
 p.cardComment {
+  cursor: default;
   width: 90%;
-  height: 100%;
-  padding-top:0px;
-  margin: 0px;
-  display: inline;
-  padding-left: 5px;
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
   float:left;
 }
 .cardAddComment {
@@ -508,20 +577,25 @@ p.cardComment {
   background-color: white;
 }
 .addCommentInput {
+  margin: 0;
+  padding: 0;
   height: 100%;
   width:90%;
   float: left;
   border: none;
 }
 .addCommentSubmitButton {
+  cursor: pointer;
   height: 100%;
   width:10%;
   float: right;
   border: none;
-  color: grey;
-  background-color: #eeeeee;
+  color: white;
+  padding-top: 5px;
+  background-color: #282c34;
   font-size: 20px;
 }
+
 .slide-up-display {
   animation: slide-up-display 0.25s forwards;
   -webkit-animation: slide-up-display 0.25s forwards;
