Changed mouse to a pointer when adding a comment to a form

--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -525,6 +525,7 @@ p.cardComment {
   border: none;
 }
 .addCommentSubmitButton {
+  cursor: pointer;
   height: 100%;
   width:10%;
   float: right;
