--- a/client/src/space.css
+++ b/client/src/space.css
@@ -1,6 +1,5 @@
 /* header and body */
 @import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
-
 .App {
   font-size: calc(7px + 2vmin);
   font-family: 'Orbitron', sans-serif;
@@ -12,8 +11,9 @@
 .App-header {
   background-color: #000000;
   font-size: calc(7px + 2vmin);
-  height: calc(4vmin);
+  height: 28px;
   vertical-align: center;
+  margin: 0px;
 }
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -45,11 +45,14 @@ body {
 }
 
 
+
 /*list of boards page/homepage */
 .boardRow {
   color: #000000;
   font-size: 18px;
   font-family: 'Orbitron', sans-serif;
+  width: 80%;
+  text-decoration: none;
 }
 .boardListing {
   background-color: #ead3c1;
@@ -67,29 +70,6 @@ body {
 
 
 /* swim lanes */
-.newLane {
-  background-color: #ead3c1;
-  border: 1px solid #a21747;
-  color: #a21747;
-  font-weight: bold;
-  font-family: 'Orbitron', sans-serif;
-  flex: 0 0 auto;
-  margin: 0vmin 3vmin 0vmin 3vmin;
-  width: 20vmax;
-  border-radius: 10px; 
-  padding: 5px;
-  height: 90%;
-  opacity: 0.9;
-}
-.newLane:hover {
-  background-color: #FFF3EB;
-  border: 1px solid #a21747;
-  cursor: pointer;
-}
-.newLane p {
-  font-size: 25px;
-} 
-
 .swimLane {
   text-align: left;
   font-size: 25px;
@@ -101,11 +81,55 @@ body {
   flex: 0 0 auto;
   margin: 0vmin 3vmin 0vmin 3vmin;
   width: 20vmax;
-  height: 90%;
+  height: 95%;
   border-radius: 10px;
   padding: 5px;
   opacity: 0.9;
 }
+.SLTitle::placeholder {
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+}
+.SLHeader input[type=text] {
+  color: #a21747;
+  background-color: transparent;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #a21747;
+  margin-bottom: 5px;
+  font-family: 'Orbitron', sans-serif;
+}
+.SLHeader input[type=text]:focus {
+  background-color: transparent;
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+}
+
+
+/* add lane */
+.newLane {
+  background-color: #ead3c1;
+  border: 1px solid #a21747;
+  color: #a21747;
+  font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
+  flex: 0 0 auto;
+  margin: 0vmin 3vmin 0vmin 3vmin;
+  width: 20vmax;
+  border-radius: 10px; 
+  padding: 5px;
+  opacity: 0.9;
+}
+.newLane:hover {
+  background-color: #FFF3EB;
+  border: 1px solid #a21747;
+  cursor: pointer;
+  opacity: 0.9
+}
+.newLane p {
+  font-size: 25px;
+} 
+
 
 
 /* create new board page */
@@ -134,10 +158,18 @@ form {
 
 /* view one board w options */
 .title{
-    color: white;
-    background-color: black;
-    font-family: 'Orbitron', sans-serif;
+  color: white;
+  background-color: black;
+  font-family: 'Orbitron', sans-serif;
+  padding-bottom: 8px;
+  margin-top: 0px;
   }  
+#sideBarActivator {
+  float: right;
+  width: 50px;
+  margin-right: 10px;
+  margin-top:-30px;
+}
 #sideBarActivator:hover {
   color: black;
   background-color: white;
@@ -145,33 +177,59 @@ form {
   border-radius: 5px;
   cursor: pointer;
 }
+#menu {
+  position:fixed;
+  top: 0;
+  right: 0;
+  display:none;
+  width: 100%;
+  height:100%;
+}
+#menuActual {
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background-color: #282c34;
+  float: right;
+  z-index: 999;
+}
 #menuActual p {
   font-size: 20px;
   color: white;
+  text-align: left;
+  padding: 1em 2em;
 }
 #menuActual p:hover{
   color: #a21747;
   background-color: #FFF3EB;
   cursor: pointer;
 }
+#menuSetup {
+  transition:.25s;
+  width: 75%;
+  height: 100%;
+  float: left;
+  opacity: 0;
+  z-index: 999;
+}
 #menuSetup:hover {
+  opacity: 0.5;
   cursor: pointer;
 }
 .exitPopoutText {
   font-size: 10vmin;
+  vertical-align: middle;
+  display: table-cell;
 }
-
-
-
-
-
-
-/*list of boards page/homepage */
-.boardRow {
-  width: 80%;
-  text-decoration: none;
+.deletePopout {
+  background-color: #FF2424;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  transition: .25s;
 }
-
 
 
 
@@ -196,87 +254,163 @@ form {
 
 
 
-/* view one board w options */
-.title{
-  padding-bottom: 8px;
-  margin-top: 0px;
-}
-#sideBarActivator {
-  float: right;
-  width: 50px;
-  margin-right: 10px;
-  margin-top:-30px;
-}
-#sideBarActivator:hover {
-  height: 25px;
-  border-radius: 5px;
-}
-#menu {
-  position:fixed;
-  top: 0;
-  right: 0;
-  display:none;
-  width: 100%;
-  height:100%;
-}
-#menuActual {
-  top: 0;
-  right: 0;
-  width: 25%;
-  height: 100%;
-  background-color: #282c34;
-  float: right;
-  z-index: 999;
-}
-#menuActual p {
-  text-align: left;
-  padding: 1em 2em;
-}
-#menuSetup {
-  transition:.25s;
-  width: 75%;
-  height: 100%;
-  float: left;
-  opacity: 0;
-  z-index: 999;
-}
-#menuSetup:hover {
-  opacity: 0.5;
-}
-.exitPopoutText {
-  vertical-align: middle;
-  display: table-cell;
-}
-.deletePopout {
-  background-color: #FF2424;
-  position: absolute;
-  width: 100%;
-  bottom: 0px;
-  left: 0px;
-  transition: .25s;
-}
 
 /* new card */
-.newCard {
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 2px;
+.card , .addCardBtn {
+  background-color: #ead3c1;
+  border: 1px solid #a21747;
+  border-radius: 10px;
+  width: auto;
+  margin: 0 5px 10px 5px;
+  padding: 0px;
 }
-.newCard:hover {
-    background-color:
+.card:hover , .addCardBtn:hover {
+  background-color: #FFF3EB;
+  cursor: pointer;
+}
+.unicodeTrashcan{
+  margin: 0px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.addCardBtn p {
+  padding-top: 0px;
 }
 
-.unicodeTrashcan{
-    margin: 0px;
-    font-size: 20px
+
+/* add card pop-up */
+#addCardName , #addCardDescription  {
+  font-family: 'Orbitron', sans-serif;
 }
-button.formAdd {
-    background-color: #ead3c1;
-    color: #a21747;
+button.formAdd , button.cardForm {
+  background-color: #ead3c1;
+  color: #a21747;
 }
-button.cardForm {
-    background-color: #FFF3EB;
-    color: #a21747;
+button.formAdd:hover , button.cardForm:hover {
+  background-color: #FFF3EB;
+  color: #a21747;
+  cursor: pointer;
+}
+
+
+
+/* edit a card */
+#cardInfoDisplay {
+  background-color: #282c34;
+  color: white;
+}
+.cardHeader {
+  border: none;
+}
+.cardTitle {
+  float: none;
+  display: inline-block;
+  margin: 5px;
+}
+.cardTitle input[type=text] {
+  color: white;
+  background-color: transparent;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid white;
+  margin-bottom: 5px;
+  font-family: 'Orbitron', sans-serif;
+}
+.cardTitle input[type=text]:focus {
+  background-color: transparent;
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+}
+.closeCardInfoButton {
+  color: #a21747;
+  display: inline;
+  float: right;
+  margin: 0px;
+  width: 5%;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  text-align: center;
+}
+.closeCardInfoButton:hover {
+  background-color: #FFF3EB;
+  color: #a21747;
+  cursor: pointer;
+  text-align: center;
+}
+
+.contentArea {
+  width: 100%;
+  margin: 10px;
+  height: 75%;
+  padding: 0px;
+}
+.descriptionArea {
+  float: left;
+  width: 45%;
+}
+.additionalInformationSidebar {
+  margin-right: 2%;
+  height: 100%;
+  width: 50%;
+  float: right;
+}
+.cardCommentContainer {
+  font-family: 'Orbitron', 
+}
+
+.displayCardInfoButtonArea {
+  margin: 10px;
+  width: 90%;
+  height: 8%;
+}
+
+button.displayCardInfoButton , #displayCardDeleteButton {
+  background-color: #ead3c1;
+  color: #a21747;
+  margin: 5px;
+}
+button.displayCardInfoButton:hover , #displayCardDeleteButton:hover {
+  background-color: #FFF3EB;
+  color: #a21747;
+  cursor: pointer;
+  margin: 5px
+}
+
+.cardTitle::placeholder , .cardDescription::placeholder , .addCommentInput::placeholder {
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+}
+.cardTitle input[type=text]:focus {
+  background-color: transparent;
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+  border-bottom: 2px solid #a21747;
+}
+.cardDescription input[type=text]:focus , .addCommentInput input[type=text]:focus {
+  background-color: #ead3c1;
+  color: #a21747;
+  font-family: 'Orbitron', sans-serif;
+  background-color: transparent;
+}
+.cardComments {
+  background-color: #FFF3EB;
+}
+div.cardComment:nth-child(even) , div.cardComment:nth-child(odd) {
+  color: #a21747;
+  background-color: #ead3c1;
+  padding: 0px;
+  border-bottom: 0.5px solid #a21747;
+}
+.addCommentSubmitButton {
+  background-color: #ead3c1;
+  color: #a21747;
+  height: 105%;
+}
+.addCommentSubmitButton:hover {
+  background-color: #FFF3EB;
+  color: #a21747;
+  cursor: pointer;
+  height: 105%;
 }
 
 
