--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -631,19 +631,32 @@ p.cardComment {
   100% { -webkit-transform: translateY(-150%); }
 }
 
-.pulse {
+.pulseY {
   display: none;
-  -webkit-animation: wiggle .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate; /* Safari 4.0 - 8.0 */
-  animation: wiggle .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate;
+  -webkit-animation: wiggleY .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate; /* Safari 4.0 - 8.0 */
+  animation: wiggleY .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate;
+}
+@keyframes wiggleX {
+  0% {width: 155px;}
+  100% {width: 147.5px;}
+}
+@-webkit-keyframes wiggleX {
+  0% {width: 155px;}
+  100% {width: 147.5px;}
+}
+.pulseX {
+  display: none;
+  -webkit-animation: wiggleX .1s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate; /* Safari 4.0 - 8.0 */
+  animation: wiggleX .1s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite alternate;
 }
 .moveCardText {
   margin: 5px;
 }
-@keyframes wiggle {
+@keyframes wiggleY {
   0% {height: 50px;}
   100% {height: 52.5px;}
 }
-@-webkit-keyframes wiggle {
+@-webkit-keyframes wiggleY {
   0% {height: 50px;}
   100% {height: 52.5px;}
 }
