--- a/client/src/Dark.css
+++ b/client/src/Dark.css
@@ -328,7 +328,7 @@ button.formAdd:hover {
 
 .contentArea {
   display: flex;
-  height: 75%;
+  height: 85%;
 }
 
 .primary-contentArea {
@@ -477,6 +477,7 @@ button.displayCardInfoButton:disabled {
 
 /* Card Form - Card Comment Elements*/
 .cardCommentContainer {
+  margin-top: 15px;
   height: 100%;
   background-color: transparent;
 }
